--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,42 +22,24 @@
   <head>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-<link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static '/assets/img/apple-icon.png' %}">
+<link rel="icon" type="image/png" href="{% static '/assets/img/favicon.png' %}">
 
 <title>
 
    Material Dashboard 2  by Creative Tim
 
-
-
-
-
 </title>
-
-
 
 <!--     Fonts and icons     -->
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
 
 <!-- Nucleo Icons -->
-<link href=/static/assets/css/nucleo-icons.css" rel="stylesheet" />
-<link href=/static/assets/css/nucleo-svg.css" rel="stylesheet" />
+<link href="{% static '/assets/css/nucleo-icons.css' %}" rel="stylesheet" />
+<link href="{% static '/assets/css/nucleo-svg.css' %}" rel="stylesheet" />
 
 <!-- Font Awesome Icons -->
 <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
@@ -94,7 +76,7 @@
   <div class="sidenav-header">
     <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard " target="_blank">
-      <img src="/static/assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
+      <img src="{% static 'assets/img/logo-ct.png' %}" class="navbar-brand-img h-100" alt="main_logo">
       <span class="ms-1 font-weight-bold text-white">Material Dashboard 2</span>
     </a>
   </div>
@@ -512,13 +494,13 @@
 
 
 
-<script src="/static/assets/js/core/popper.min.js" ></script>
-<script src="/static/assets/js/core/bootstrap.min.js" ></script>
-<script src="/static/assets/js/plugins/perfect-scrollbar.min.js" ></script>
-<script src="/static/assets/js/plugins/smooth-scrollbar.min.js" ></script>
+<script src="{% static '/assets/js/core/popper.min.js' %}" ></script>
+<script src="{% static '/assets/js/core/bootstrap.min.js' %}" ></script>
+<script src="{% static '/assets/js/plugins/perfect-scrollbar.min.js' %}" ></script>
+<script src="{% static '/assets/js/plugins/smooth-scrollbar.min.js' %}" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <script async defer src="https://buttons.github.io/buttons.js"></script>
-      <script src="/static/assets/js/material-dashboard.min.js?v=3.1.0"></script>
+      <script src="{% static '/assets/js/material-dashboard.min.js?v=3.1.0' %}"></script>
 
 
 
